@@ -10,9 +10,10 @@ import java.nio.ByteBuffer;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.function.BooleanSupplier;
 
 /**
- * Author: marc
+ * @author Marc Gathier
  * Copied code from Tomcat to clean buffer: org.apache.tomcat.util.buf.ByteBufferUtils
  */
 public class CleanUtils {
@@ -27,6 +28,7 @@ public class CleanUtils {
             return thread;
         }
     });
+    private static final int RETRIES = 5;
 
     static {
         ByteBuffer tempBuffer = ByteBuffer.allocateDirect(0);
@@ -45,7 +47,11 @@ public class CleanUtils {
 
             cleanMethodLocal.invoke(cleanerObject);
         } catch (IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException | IllegalAccessException methodException) {
-            logger.warn("byteBufferUtils.cleaner", methodException);
+            if( logger.isDebugEnabled()) {
+                logger.warn("Unable to configure clean method. If you are running on Windows with a Java version 9 or higher start Axon Server with --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED", methodException);
+            } else {
+                logger.warn("Unable to configure clean method. If you are running on Windows with a Java version 9 or higher start Axon Server with --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED");
+            }
             cleanerMethodLocal = null;
             cleanMethodLocal = null;
         }
@@ -56,13 +62,13 @@ public class CleanUtils {
     private CleanUtils() {
     }
 
-    public static void cleanDirectBuffer(ByteBuffer buf, boolean allowed, long delay) {
-        if (allowed && cleanMethod != null && buf != null) {
+    public static void cleanDirectBuffer(ByteBuffer buf, BooleanSupplier allowed, long delay, String file) {
+        if (cleanMethod != null && buf != null) {
             if (delay <= 0) {
-                doCleanup(buf);
+                doCleanup(allowed, buf, 10, file, RETRIES);
             } else {
                 try {
-                    cleanupExecutor.schedule(() -> doCleanup(buf), delay, TimeUnit.SECONDS);
+                    cleanupExecutor.schedule(() -> doCleanup(allowed, buf, delay, file, RETRIES), delay, TimeUnit.SECONDS);
                 } catch( Exception ignore) {
                     //may be as executor is shutdown
                 }
@@ -70,9 +76,20 @@ public class CleanUtils {
         }
     }
 
-    private static void doCleanup(ByteBuffer buf) {
+    private static void doCleanup(BooleanSupplier allowed, ByteBuffer buf, long delay, String file, int retries) {
+        if( ! allowed.getAsBoolean()) {
+            if( retries > 0) {
+                logger.debug("Memory mapped buffer not cleared for {}, retry after {} seconds", file, delay);
+                cleanupExecutor.schedule(() -> doCleanup(allowed, buf, delay, file, retries-1), delay, TimeUnit.SECONDS);
+            } else {
+                logger.debug("Memory mapped buffer not cleared for {}, giving up", file);
+            }
+
+            return;
+        }
         try {
             cleanMethod.invoke(cleanerMethod.invoke(buf));
+            logger.debug("Memory mapped buffer cleared for {}", file);
         } catch (IllegalArgumentException | InvocationTargetException | SecurityException | IllegalAccessException exception) {
             logger.warn("Clean failed", exception);
         }
